arm/Project/elevator/.metadata/.plugins/org.eclipse.cdt.ui/EV_PJ_Ver.1.0.4.build.log
09:41:56 **** Incremental Build of configuration Debug for project EV_PJ_Ver.1.0.4 ****
make -j16 all 
arm-none-eabi-gcc "../Core/Src/Button.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F411xE -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/Button.d" -MT"Core/Src/Button.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/Button.o"
arm-none-eabi-gcc "../Core/Src/ap.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F411xE -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/ap.d" -MT"Core/Src/ap.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/ap.o"
../Core/Src/ap.c: In function 'apInit':
../Core/Src/ap.c:20:17: warning: unused variable 'B_EM_Flag' [-Wunused-variable]
   20 |         uint8_t B_EM_Flag = 0;                                          // EM_Flag 초기화 안함
      |                 ^~~~~~~~~
../Core/Src/ap.c:19:17: warning: unused variable 'B_State' [-Wunused-variable]
   19 |         uint8_t B_State[8] = {0,0,0,0,0,0,0,0};         // 버튼 초기화용 값
      |                 ^~~~~~~
../Core/Src/ap.c:16:17: warning: unused variable 'B_ON_State' [-Wunused-variable]
   16 |         uint8_t B_ON_State[8] = {0,0,0,0,0,0,0,0};      // 버튼 < led on 상태
      |                 ^~~~~~~~~~
../Core/Src/ap.c: In function 'apMain':
../Core/Src/ap.c:45:12: error: 'B_ON_State' undeclared (first use in this function)
   45 |         if(B_ON_State == 0'b10000000)
      |            ^~~~~~~~~~
../Core/Src/ap.c:45:12: note: each undeclared identifier is reported only once for each function it appears in
../Core/Src/ap.c:45:27: warning: missing terminating ' character
   45 |         if(B_ON_State == 0'b10000000)
      |                           ^
../Core/Src/ap.c:45:27: error: missing terminating ' character
   45 |         if(B_ON_State == 0'b10000000)
      |                           ^~~~~~~~~~~
../Core/Src/ap.c:45:27: error: expected ')' before '{' token
   45 |         if(B_ON_State == 0'b10000000)
      |           ~               ^
      |                           )
   46 |         {
      |         ~                  
../Core/Src/ap.c:51:1: error: expected expression before '}' token
   51 | }
      | ^
make: *** [Core/Src/subdir.mk:61: Core/Src/ap.o] Error 1
make: *** Waiting for unfinished jobs....
"make -j16 all" terminated with exit code 2. Build might be incomplete.

09:41:56 Build Failed. 6 errors, 4 warnings. (took 202ms)

